<resources>
    <string name="app_name">Vasudev Kutumbhakam</string>
    <string name="home">Home</string>
    <string name="play_and_earn"><![CDATA[Play & earn]]></string>
    <string name="loans">Loans</string>
    <string name="assist">Assist</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="add_you_bank_account">Add you bank account</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="repay_on_time">Repay on time</string>
    <string name="transact_regularly">Transact Regularly</string>
    <string name="refer_friend">Refer Friend</string>
    <string name="our_happy_customers">Our Happy Customers!</string>
    <string name="get_started_now">Get Started Now</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="option_btn_icon">Option Btn Icon</string>
    <string name="check_eligibility">Check Eligibility</string>
    <string name="user_details">User Details</string>
    <string name="income_accept_msg"><![CDATA[I declare that my monthly household income is more than Rs. 15000, and my borrowing under the present facility does not qualify to be treated as a microfinance loan]]></string>
    <string name="id_proof_acccept_msg">I hereby declare that the ID proof submitted by me is valid, belongs to me, and I authorize Vasudev Kutumbhakam to use this document for identity verification and KYC purposes, as per applicable regulations.</string>
    <string name="income_details">Income Details</string>
    <string name="id_proof">ID Proof</string>
    <string name="kyc">KYC</string>
    <string name="instruction1"><b>START VIDEO CALL</b> to Connect to an Agent now and complete your KYC over the video call.</string>
    <string name="instruction3">Keep your <b>ORIGINAL PAN CARD</b> ready for display to the agent</string>
    <string name="instruction2"><b>ANSWER THE QUESTIONS</b> asked by our agent</string>
    <string name="instruction4">You should be <b>SUITABLY DRESSED</b> and stand in a place with proper lighting</string>
    <string name="bank_details">Bank Details</string>
</resources>