<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/_4sdp"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/home_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/home_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home"
            android:src="@drawable/home" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_nav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/play_earn_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/play_earn_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/play_and_earn"
            android:src="@drawable/play_earn" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/play_earn_nav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_and_earn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/loans_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/loans_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/loans"
            android:src="@drawable/loans" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/loans_nav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loans" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/assist_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/assist_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/assist"
            android:src="@drawable/assist" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/assist_nav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assist" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profile_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_nav_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile"
            android:src="@drawable/profile" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/profile_nav_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

    </LinearLayout>

</LinearLayout>