<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:src="@drawable/arrow_right" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/_14ssp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/notification"
            android:src="@drawable/ic_bell" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:clipToPadding="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!--Profile-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="@dimen/_85sdp"
                    android:layout_height="@dimen/_85sdp"
                    app:civ_border_color="#D9D9D9"
                    app:civ_border_width="1dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:src="@drawable/avtar" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/profile_edit_btn"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:background="@drawable/edit_btn_circle_bg"
                    android:padding="@dimen/_4sdp"
                    app:layout_constraintEnd_toEndOf="@id/profile_image"
                    app:layout_constraintBottom_toBottomOf="@id/profile_image"
                    android:layout_marginEnd="@dimen/_4sdp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:contentDescription="@string/edit"
                    android:src="@drawable/edit_square" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp" />

            <!--Name, Mobile, Email, eyc-->
            <!-- Name -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rohan Gaikwad"
                android:textStyle="bold"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/_16sdp" />

            <!-- Phone -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 8934238912"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary" />

            <!-- Email -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="rohangaikwad@gmail.com"
                android:textSize="@dimen/_11ssp"
                android:textColor="@color/textColorSecondary" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invite &amp; Earn upto 250"
                android:padding="@dimen/_4sdp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:ems="10"
                android:textAlignment="center"
                android:background="@drawable/btn_bg" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp" />

            <!--Button RecyclerView-->
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/option_btn_rv" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp" />
            <!--Share btn-->
            <include layout="@layout/item_share_layout" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>